
	Make linking to Vienna librna configurable, default=off! Activate
	by calling ./configure with --enable-librna.

	New strategy for consensus dot plot generation: employ RNAalifold
	-p.  Enable via mlocarna's option --alifold-consensus-dp Note: the
	default consensus dot plot computation seems to be flawed! The new
	tool pp2dot allows to visualize consensus dot plots (by converting
	pp to Vienna-like dot plot postscript files) and should help to
	improve the default strategy (otherwise we are going to replace
	it!)

	mlocarna accepts via --tree-file a super-tree as guide tree and
	automatically projects to the taxa in the input.

	Allow quotation in newick trees (using Text::ParseWords)
	and use quotations when generating newick trees

May, 2011
	Fix a problem with compiling on case-insensitive file systems (generate 	locarna.bin instead of locarna executable in src, rename at install)

	add alifold-consensus-dp option for mlocarna

Aug, 2011: Add code for 'locarna_X'

Sep, 2011: Adding Exparna-P code for "in loop" probabilities

Oct, 2011: pre-release 1.6.2

Nov, 2011:
	Add mlocarna options (pw-aligner and pw-aligner-p) to run
	specified binaries in place of locarna and locarna_p. This can be
	used to plug in compatible programs like carna

	Bug fix; compilation without linking libRNA was broken.
	release (1.6.2)

Dec, 2011
	Bug-fixes: treefile regexp, LARGE_PF name clash mit Vienna package
	(1.6.2.1)
	add script to translate to normalized names for mlocarna

	Add options pw-aligner-options and pw-aligner-p-options, to mlocarna to pass option strings to the pairwise
	aligner.  This is useful in combination with specifying
	non-standard pairwise alignment programs.

	Support generation of pp files from dp2.ps and dp.ps files when
	skipping dot plot computation with --skip-pp (keep name for
	legacy).  This allows the combine user-defined dotplots with
	anchor constraints from the mfasta input file.
	(1.6.2.2)